Updated_cheat_sheet

--- a/Cheat_sheet/Latex_cheat_sheet.tex
+++ b/Cheat_sheet/Latex_cheat_sheet.tex
@@ -134,13 +134,14 @@
 				\subfigure[Event Calendar]{\includegraphics[height=100pt, width=100pt]{images/fliers/persco_event.jpg}}
 			
 			\caption{Fliers}
+			\label{fig:figure1}
 		\end{figure}
 	\end{frame}
 	\begin{frame}{LaTeX Code for inserting image}
 		\begin{figure}
 			\includegraphics[width=0.9\textwidth, height=0.6\textheight]{images/code/fliers_code.png}
 			
-			\caption{Code for inserting image, figure 1}
+			\caption{Code for inserting image (\ref{fig:figure1}) }
 		\end{figure}
 	\end{frame}
 	
