Updated_cheat_sheet

--- a/Cheat_sheet/Latex_cheat_sheet.tex
+++ b/Cheat_sheet/Latex_cheat_sheet.tex
@@ -133,7 +133,7 @@
 				\subfigure[Mass Passport]{\includegraphics[height=100pt, width=100pt]{images/fliers/passport.jpg}} \hspace{5pt}
 				\subfigure[Event Calendar]{\includegraphics[height=100pt, width=100pt]{images/fliers/persco_event.jpg}}
 			
-			\caption{Fliers}
+			\caption*{Fliers}
 			\label{fig:figure1}
 		\end{figure}
 	\end{frame}
@@ -141,7 +141,7 @@
 		\begin{figure}
 			\includegraphics[width=0.9\textwidth, height=0.6\textheight]{images/code/fliers_code.png}
 			
-			\caption{Code for inserting image (\ref{fig:figure1}) }
+			\caption{Code for inserting image (figure \ref{fig:figure1}) }
 		\end{figure}
 	\end{frame}
 	
